Revert z-index to be 5 for react-flow__nodes and react-flow__node, to avoid multiselect issues.

--- a/src/client/src/components/flow/flow.scss
+++ b/src/client/src/components/flow/flow.scss
@@ -12,11 +12,11 @@
 }
 
 .react-flow__nodes {
-  z-index: 11 !important;
+  z-index: 5 !important;
 }
 
 .react-flow__node {
-  z-index: 10 !important;
+  z-index: 5 !important;
 }
 
 .react-flow__edges {
